map/f
In file included from main.cpp:19:
./map.hpp:62:17: error: no matching function for call to object of type 'const std::__1::less<int>'
    std::cout <<comp() <<std::endl;
                ^~~~
main.cpp:33:24: note: in instantiation of member function 'ft::map<int, int, std::__1::less<int>, std::__1::allocator<std::__1::pair<const int, int> > >::map' requested here
    ft::map< int, int> mapp;
                       ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/__functional_base:54:10: note: candidate function not viable: requires 2 arguments, but 0 were provided
    bool operator()(const _Tp& __x, const _Tp& __y) const
         ^
1 error generated.
